--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #11f970;
+      background-color: #FFFFFF;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #ffffff;
     }
@@ -50,9 +50,12 @@
     </div>
 
     <h2>Authors</h2>
-<p>Paolo Bosetti (paolo.bosetti@me.com)<br/><br/>      </p>
+<p>Paolo Bosetti (paolo.bosetti@me.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Paolo Bosetti (paolo.bosetti@me.com)<br/>      </p>
+<p>Paolo Bosetti (paolo.bosetti@me.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
