--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
       <span class="small">by <a href="http://github.com/pbosetti">pbosetti</a></span></h1>
 
     <div class="description">
-      Client libraries for the Charter App (soon on the Mac App store)
+      <p>Client libraries for the Charter App (soon on the Mac App store).</p>
+      
+      <p>At the moment, only the ruby library is available. More will follow.</p>
+      
+      <img src="Images/MainWindow.jpg" width="600" height="428" alt="MainWindow">
     </div>
 
     <h2>Authors</h2>
