Updated index with app store link and new libraries

--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
       <span class="small">by <a href="http://github.com/pbosetti">pbosetti</a></span></h1>
 
     <div class="description">
-      <p>Client libraries for the Charter App (soon on the Mac App store).</p>
+      <p>Client libraries for the <a href="http://bit.ly/charterapp" target="blank">Charter App</a> (available on the Mac App store).</p>
       
-      <p>At the moment, only the ruby library is available. More will follow.</p>
+      <p>At the moment, only the following libraries are available:</p>
+      <ul>
+        <li>Ruby</li>
+        <li>C</li>
+        <li>Arduino (mixed C/Ruby)</li>
+      </ul>
       
       <img src="Images/MainWindow.jpg" width="600" height="428" alt="MainWindow">
     </div>
